--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     ],
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
+            "matches": ["https://play.planningpoker.com/*"],
             "js": [ "contentScript.js" ],
             "run_at": "document_idle"
         }
